--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "misshaialert",
-   "version": "1.0.0-alpha.1",
+   "version": "1.0.0",
    "description": "",
    "main": "built/app.js",
    "author": "Xeltica",
@@ -22,6 +22,7 @@
       "@types/koa-bodyparser": "^4.3.0",
       "@types/koa-mount": "^4.0.0",
       "@types/koa-static": "^4.0.1",
+      "@types/node-cron": "^2.0.3",
       "@types/uuid": "^8.0.0",
       "axios": "^0.19.2",
       "koa": "^2.13.0",
@@ -31,13 +32,14 @@
       "koa-session": "^6.0.0",
       "koa-static": "^5.0.0",
       "koa-views": "^6.3.0",
+      "node-cron": "^2.0.3",
       "pg": "^8.3.0",
       "pug": "^3.0.0",
+      "reflect-metadata": "^0.1.10",
       "sass": "^1.26.10",
       "typeorm": "0.2.25",
       "typescript": "^3.9.7",
-      "uuid": "^8.3.0",
-      "reflect-metadata": "^0.1.10"
+      "uuid": "^8.3.0"
    },
    "devDependencies": {
       "@types/axios": "^0.14.0",
@@ -45,6 +47,7 @@
       "@types/koa-router": "^7.4.1",
       "@types/koa-session": "^5.10.2",
       "@types/koa-views": "^2.0.4",
+      "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^3.7.0",
       "@typescript-eslint/parser": "^3.7.0",
       "copyfiles": "^2.3.0",
@@ -55,7 +58,6 @@
       "npm-run-all": "^4.1.5",
       "prettier": "^2.0.5",
       "rimraf": "^3.0.2",
-      "ts-node": "3.3.0",
-      "@types/node": "^8.0.29"
+      "ts-node": "3.3.0"
    }
 }
