--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "@types/node-cron": "^2.0.3",
       "@types/uuid": "^8.0.0",
       "axios": "^0.19.2",
+      "delay": "^4.4.0",
       "koa": "^2.13.0",
       "koa-bodyparser": "^4.3.0",
       "koa-mount": "^4.0.0",
@@ -36,6 +37,7 @@
       "pg": "^8.3.0",
       "pug": "^3.0.0",
       "reflect-metadata": "^0.1.10",
+      "rndstr": "^1.0.0",
       "sass": "^1.26.10",
       "typeorm": "0.2.25",
       "typescript": "^3.9.7",
