--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
    "dependencies": {
       "@types/koa-bodyparser": "^4.3.0",
       "@types/koa-mount": "^4.0.0",
+      "@types/koa-multer": "^1.0.0",
       "@types/koa-static": "^4.0.1",
       "@types/node-cron": "^2.0.3",
       "@types/uuid": "^8.0.0",
@@ -29,6 +30,7 @@
       "koa": "^2.13.0",
       "koa-bodyparser": "^4.3.0",
       "koa-mount": "^4.0.0",
+      "koa-multer": "^1.0.2",
       "koa-router": "^9.1.0",
       "koa-session": "^6.0.0",
       "koa-static": "^5.0.0",
