--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
       "start": "node built/app.js",
       "lint": "eslint src/index.ts",
       "lint:fix": "eslint --fix src/index.ts",
-      "build:views": "copyfiles -u 1 src/views/*.pug ./built/",
       "clean": "rimraf built",
-      "build:scripts": "tsc",
-      "build:styles": "sass styles/:built/assets",
+      "build:backend": "tsc",
       "build": "run-p build:*",
       "migrate": "ts-node --project ./tsconfig.migration.json ./node_modules/typeorm/cli.js migration:run",
       "migrate:revert": "ts-node --project ./tsconfig.migration.json ./node_modules/typeorm/cli.js migration:revert",
@@ -27,6 +25,8 @@
       "@types/node-cron": "^2.0.3",
       "@types/uuid": "^8.0.0",
       "axios": "^0.19.2",
+      "class-transformer": "^0.4.0",
+      "class-validator": "^0.13.1",
       "dayjs": "^1.10.2",
       "delay": "^4.4.0",
       "koa": "^2.13.0",
@@ -40,8 +40,9 @@
       "node-cron": "^2.0.3",
       "pg": "^8.3.0",
       "pug": "^3.0.0",
-      "reflect-metadata": "^0.1.10",
+      "reflect-metadata": "^0.1.13",
       "rndstr": "^1.0.0",
+      "routing-controllers": "^0.9.0",
       "sass": "^1.26.10",
       "typeorm": "0.2.25",
       "typescript": "^3.9.7",
