dev: 開発環境を整備

--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
 	"author": "Xeltica",
 	"private": true,
 	"scripts": {
-		"tsc": "tsc",
-		"start": "node built/app.js",
-		"lint": "eslint --ext .ts,.tsx src",
-		"lint:fix": "eslint --fix --ext .ts,.tsx src",
-		"clean": "rimraf built",
-		"build:backend": "tsc",
+		"build": "run-p build:*",
 		"build:frontend": "webpack",
+		"build:backend": "tsc",
 		"build:views": "copyfiles -u 1 src/views/*.pug ./built/",
 		"build:styles": "sass styles/:built/assets",
-		"build": "run-p build:*",
+		"start": "node built/app.js",
+		"dev": "run-p dev:*",
+		"dev:backend": "nodemon",
+		"dev:frontend": "webpack --watch",
+		"clean": "rimraf built",
+		"tsc": "tsc",
+		"lint": "eslint --ext .ts,.tsx src",
+		"lint:fix": "eslint --fix --ext .ts,.tsx src",
 		"migrate": "ts-node --project ./tsconfig.migration.json ./node_modules/typeorm/cli.js migration:run",
-		"migrate:revert": "ts-node --project ./tsconfig.migration.json ./node_modules/typeorm/cli.js migration:revert",
-		"dev": "nodemon",
-		"dev:frontend": "webpack --watch"
+		"migrate:revert": "ts-node --project ./tsconfig.migration.json ./node_modules/typeorm/cli.js migration:revert"
 	},
 	"dependencies": {
 		"@babel/preset-react": "^7.14.5",
