--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "run-p build:*",
 		"build:frontend": "webpack",
 		"build:backend": "tsc",
-		"build:views": "copyfiles -u 1 src/views/*.pug ./built/",
+		"build:views": "copyfiles -u 1 src/backend/views/*.pug ./built/",
 		"build:styles": "sass styles/:built/assets",
 		"start": "node built/app.js",
 		"dev": "run-p dev:*",
@@ -67,6 +67,8 @@
 		"style-loader": "^3.2.1",
 		"styled-components": "^5.3.1",
 		"ts-loader": "^9.2.5",
+		"tsc-alias": "^1.3.9",
+		"tsconfig-paths-webpack-plugin": "^3.5.1",
 		"typeorm": "0.2.25",
 		"typescript": "^4.4.2",
 		"uuid": "^8.3.0",
