--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"@babel/preset-react": "^7.14.5",
+		"@reduxjs/toolkit": "^1.6.1",
 		"@types/koa-bodyparser": "^4.3.0",
 		"@types/koa-multer": "^1.0.0",
 		"@types/koa-send": "^4.1.3",
@@ -58,6 +59,7 @@
 		"pug": "^3.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.1",
 		"reflect-metadata": "^0.1.13",
 		"rndstr": "^1.0.0",
