--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"pug": "^3.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-modal-hook": "^3.0.0",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.1",
 		"reflect-metadata": "^0.1.13",
