--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"dayjs": "^1.10.2",
 		"delay": "^4.4.0",
 		"fibers": "^5.0.0",
+		"i18next": "^20.6.1",
+		"i18next-browser-languagedetector": "^6.1.2",
 		"json5-loader": "^4.0.1",
 		"koa": "^2.13.0",
 		"koa-bodyparser": "^4.3.0",
@@ -59,6 +61,7 @@
 		"pug": "^3.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-i18next": "^11.12.0",
 		"react-modal-hook": "^3.0.0",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.1",
