--- a/src/frontend/langs/en_US.json5
+++ b/src/frontend/langs/en_US.json5
@@ -1,5 +1,99 @@
 {
 	translation: {
-		title: "Misskey Alert",
-	}
+		title: "Misskey Tools",
+		description1: "Misskeyは楽しいものです。気がついたら1日中入り浸っていることも多いでしょう。",
+		description2: "さあ、今すぐMisskey Toolsをインストールして、あなたの活動を把握しよう。",
+		notes: "Notes",
+		following: "Following",
+		followers: "Followers",
+		welcomeBack: "Welcome back, {{acct}}.",
+		alertMode: "How to Send Alerts",
+		visibility: "Visibility",
+		appearance: "Appearance",
+		template: "Template",
+		sendAlert: "Test your alert",
+		sendAlertDescription: "Send your alert with current settings to test.",
+		logout: "Log Out",
+		logoutDescription: "If you log out, alerts will be sent.",
+		deleteAccount: "Deactivate account integration",
+		deleteAccountDescription: "Delete your Misskey Tools account. This will deactivate integration with Misskey.",
+		instanceUrl: "Instance URL",
+		login: "Login",
+		localOnly: "Local Only",
+		remoteFollowersOnly: "Remote Followers and Local Only",
+		help: "Help",
+		save: "Save",
+		theme: "Theme",
+		language: "Language",
+		fetching: "Fetching...",
+		failedToFetch: "Failed to fetch",
+		registeredUsersCount: "Users",
+		isCalculating: "It is being calculated now. Please check back later!",
+		ok: "OK",
+		yes: "Yes",
+		no: "No",
+		termsOfService: "Terms of Service",
+		name: "Name",
+		_welcomeMessage: {
+			pattern1: "Overnoting Misskey?",
+			pattern2: "Overusing Misskey?",
+			pattern3: "How many notes did you write today?",
+			pattern4: "Do you really think you're lite-misskist?",
+			pattern5: "Misskey is my breathing!",
+			pattern6: "I'm Misskey freak!",
+		},
+		_sendAlertDialog: {
+			title: "Are you sure you want to send the alert for testing?",
+			message: "Send an alert with the current settings. Be sure to check whether you saved the settings before executing.",
+			success: "Alert sent.",
+			error: "Failed to send alert.",
+		},
+		_nav: {
+			data: "Data",
+			ranking: "Ranking",
+			settings: "Settings",
+		},
+		_missHai: {
+			ranking: "Miss-hai Ranking",
+			rankingDescription1: "ユーザーの「みす廃レート」を算出し、高い順にランキング表示しています。みす廃レートは、次のような条件で算出されます。",
+			rankingFormula: "(ノート数) / (アカウント登録からの経過日数)",
+			rankingDescription2: "廃人を極めるか、ノート数を控えるか、全てあなた次第！",
+			showAll: "Show All",
+			data: "Miss-hai Data",
+			dataBody: "",
+			dataScore: "Score",
+			dataDelta: "Difference",
+			rating: "Rating",
+			order: "Order",
+		},
+		_developerInfo: {
+			title: "Developer",
+			description: "If you want supports, send messages to the below accounts.",
+		},
+		_timeline: {
+			title: "Timeline",
+			description: "Shows latest notes including {{hashtag}} tags.",
+		},
+		_alertMode: {
+			note: "Automatic Note",
+			notification: "Notify to your account (Default)",
+			nothing: "Do Nothing",
+			notificationWarning: "'Notify to your account' option will not be work on legacy versions of Misskey.",
+		},
+		_visibility: {
+			public: "Public",
+			home: "Home",
+			followers: "Followers",
+			users: "Logged-in Users",
+		},
+		_themes: {
+			light: "Light",
+			dark: "Dark",
+			system: "Follows System Preferences",
+		},
+		_template: {
+			description: "アラートの自動投稿をカスタマイズできます。",
+			description2: "ハッシュタグ #misshaialert は、テンプレートに関わらず自動付与されます。",
+		},
+	},
 }
