--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@babel/preset-react": "^7.14.5",
 		"@reduxjs/toolkit": "^1.6.1",
+		"@types/insert-text-at-cursor": "^0.3.0",
 		"@types/koa-bodyparser": "^4.3.0",
 		"@types/koa-multer": "^1.0.0",
 		"@types/koa-send": "^4.1.3",
@@ -45,6 +46,7 @@
 		"fibers": "^5.0.0",
 		"i18next": "^20.6.1",
 		"i18next-browser-languagedetector": "^6.1.2",
+		"insert-text-at-cursor": "^0.3.0",
 		"json5-loader": "^4.0.1",
 		"koa": "^2.13.0",
 		"koa-bodyparser": "^4.3.0",
