--- a/src/frontend/langs/en_US.json5
+++ b/src/frontend/langs/en_US.json5
@@ -37,19 +37,16 @@
 		name: "Name",
 		resetToDefault: "Reset to default",
 		error: "Error",
+		disclaimerForMisskeyHq: "Misskey Tools is <b>not</b> a official tool by Misskey HQ.",
+		translatedByTheCommunity: "Misskey Tools has been translated by the community.",
+		helpTranslation: "Help translation",
 		_welcomeMessage: {
-			pattern1: "Overnoting Misskey?",
-			pattern2: "Overusing Misskey?",
+			pattern1: "Are you overnoting?",
+			pattern2: "Are you overusing Misskey?",
 			pattern3: "How many notes did you write today?",
 			pattern4: "Do you really think you're lite-misskist?",
 			pattern5: "Misskey is my breathing!",
 			pattern6: "I'm Misskey freak!",
-		},
-		_sendAlertDialog: {
-			title: "Are you sure you want to send the alert for testing?",
-			message: "Send an alert with the current settings. Be sure to check whether you saved the settings before executing.",
-			success: "Alert sent.",
-			error: "Failed to send alert.",
 		},
 		_nav: {
 			data: "Data",
@@ -98,6 +95,8 @@
 			description: "Customize template of your alert.",
 			description2: "Hashtag '#misshaialert' will be appended regardless of the template.",
 			default: "My Misskey activity yesterday was:\n\nNotes: {notesCount}({notesDelta})\nFollowing: {followingCount}({followingDelta})\nFollowers: {followersCount}({followersDelta})\n\n{url}",
+			insertVariables: "Insert variables",
+			insertVariablesHelp: "The string enclosed in { } is called \"variables\" and has a special meaning. If you include this, it will be automatically replaced to the actual value when alerts created.",
 		},
 		_error: {
 			sorry: "Something went wrong. Please retry again.",
@@ -109,6 +108,28 @@
 			invalidParameter: "Invalid parameter.",
 			notAuthorized: "Not authorized.",
 			other: "None",
+		},
+		_sendTest: {
+			title: "Are you sure you want to test the alert?",
+			message: "Send an alert with the current settings. Be sure to check that the settings have been saved before sending.",
+			yes: "Send",
+			no: "Cancel",
+			success: "Alert sent.",
+			failure: "Failed to sent the alert.",
+		},
+		_logout: {
+			title: "Are you sure you want to logout?",
+			message: "Even if you log out, features such as sending alerts and collecting data from your Misskey account will continue to work. If you wish to stop using Misskey Tools, click the \"Deactivate account integration\" button.",
+			yes: "Logout",
+			no: "Cancel",
+		},
+		_deactivate: {
+			title: "Do you want to deactivate your accounts?",
+			message: "All data, including collected data and personal settings, will be deleted. You cannot undo this operation. You cannot undo this operation.",
+			yes: "Deactivate",
+			no: "Cancel",
+			success: "Your account has been deactivated. Return to the top screen.",
+			failure: "Failed to delete account.",
 		},
 	},
 }
