--- a/src/frontend/langs/ja_JP.json5
+++ b/src/frontend/langs/ja_JP.json5
@@ -37,6 +37,9 @@
 		resetToDefault: "初期値に戻す",
 		error: "エラー",
 		retry: "やり直す",
+		disclaimerForMisskeyHq: "Misskey Toolsは、Misskey HQの公式ツールでは<b>ありません</b>。",
+		translatedByTheCommunity: "Misskey Toolsはコミュニティによって翻訳されています。",
+		helpTranslation: "翻訳に協力する",
 		_welcomeMessage: {
 			'pattern1': 'ついついノートしすぎていませんか？',
 			'pattern2': 'Misskey, しすぎていませんか？',
@@ -44,12 +47,6 @@
 			'pattern4': '10000 ノートは初心者、そう思っていませんか？',
 			'pattern5': '息するように Misskey、そんなあなたへ。',
 			'pattern6': 'あなたは真の Misskey 廃人ですか？',
-		},
-		_sendAlertDialog: {
-			title: "アラートをテスト送信しますか？",
-			message: "現在の設定でアラートを送信します。設定が保存済みであるかどうか、実行前に必ずご確認ください。",
-			success: "送信しました。",
-			error: "送信に失敗しました。",
 		},
 		_nav: {
 			data: "データ",
@@ -98,6 +95,8 @@
 			description: "アラートの自動投稿をカスタマイズできます。",
 			description2: "ハッシュタグ #misshaialert は、テンプレートに関わらず自動付与されます。",
 			default: "昨日のMisskeyの活動は\n\nノート: {notesCount}({notesDelta})\nフォロー : {followingCount}({followingDelta})\nフォロワー :{followersCount}({followersDelta})\n\nでした。\n{url}",
+			insertVariables: "変数を挿入する",
+			insertVariablesHelp: "{ } で囲われた文字列は変数と呼ばれ、特別な意味を持ちます。これを含めると、投稿時に自動的に値が埋め込まれます。",
 		},
 		_error: {
 			sorry: "問題が発生しました。お手数ですが、やり直してください。",
@@ -109,6 +108,28 @@
 			invalidParameter: "パラメータが不正です。",
 			notAuthorized: "権限がありません。",
 			other: "なし",
+		},
+		_sendTest: {
+			title: "アラートをテスト送信しますか？",
+			message: "現在の設定でアラートを送信します。設定が保存済みであるかどうか、実行前に必ずご確認ください。",
+			yes: "送信する",
+			no: "キャンセル",
+			success: "送信しました。",
+			failure: "送信に失敗しました。",
+		},
+		_logout: {
+			title: "ログアウトしてもよろしいですか？",
+			message: "ログアウトしても、アラート送信や、お使いのMisskeyアカウントのデータ収集といった機能は動作し続けます。Misskey Toolsの利用を停止したい場合は、「アカウント連携を解除する」ボタンを押下して下さい。",
+			yes: "ログアウトする",
+			no: "キャンセル",
+		},
+		_deactivate: {
+			title: "アカウント連携を解除しますか？",
+			message: "収集されたデータや個人設定など、全てのデータが削除されます。この操作は取り消すことができません。",
+			yes: "解除する",
+			no: "キャンセル",
+			success: "アカウントを解除しました。トップ画面に戻ります。",
+			failure: "アカウントを解除できませんでした。",
 		},
 	},
 }
