--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,17 +1,20 @@
 {
 	"compilerOptions": {
 		"strictNullChecks": true,
-		"noUnusedLocals" : true,
+		"noUnusedLocals": true,
 		"noImplicitThis": true,
 		"alwaysStrict": true,
 		"outDir": "./built/assets/",
 		"sourceMap": true,
 		"noImplicitAny": true,
-		"lib": ["dom"],
+		"lib": [
+			"dom"
+		],
 		"module": "ESNext",
 		"target": "es5",
 		"moduleResolution": "node",
 		"jsx": "react",
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true
 	}
 }
