--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"scripts": {
 		"build": "run-p build:*",
 		"build:frontend": "webpack",
-		"build:backend": "tsc",
+		"build:backend": "run-p build:backend-source build:views build:styles",
+		"build:backend-source": "tsc",
 		"build:views": "copyfiles -u 1 src/backend/views/*.pug ./built/",
 		"build:styles": "sass styles/:built/assets",
 		"start": "node built/app.js",
@@ -41,7 +42,7 @@
 		"class-transformer": "^0.4.0",
 		"class-validator": "^0.13.1",
 		"css-loader": "^6.2.0",
-		"dayjs": "^1.10.2",
+		"dayjs": "^1.10.7",
 		"delay": "^4.4.0",
 		"fibers": "^5.0.0",
 		"i18next": "^20.6.1",
