--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
 	"compilerOptions": {
-		"target": "es5",													/* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
-		"module": "commonjs",										/* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
-		"outDir": "./built/",												/* Redirect output structure to the directory. */
-		"rootDir": "./src/",											/* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-		"strict": true,													/* Enable all strict type-checking options. */
-		"strictPropertyInitialization": false,	/* Enable strict checking of property initialization in classes. */
+		"target": "es5",
+		"module": "commonjs",
+		"outDir": "./built/",
+		"strict": true,
+		"strictPropertyInitialization": false,
 		"typeRoots": [
 				"node_modules/@types",
 				"src/@types"
-		],													/* List of folders to include type definitions from. */
-		"esModuleInterop": true,									/* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-		"experimentalDecorators": true,				/* Enables experimental support for ES7 decorators. */
-		"emitDecoratorMetadata": true,				/* Enables experimental support for emitting type metadata for decorators. */
-		"skipLibCheck": true,										/* Skip type checking of declaration files. */
-		"forceConsistentCasingInFileNames": true	/* Disallow inconsistently-cased references to the same file. */
+		],
+		"esModuleInterop": true,
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true
 	},
 	"exclude": [
 		"./migration",
