--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"target": "es5",
 		"module": "commonjs",
 		"outDir": "./built/",
+		"rootDir": "./src/",
 		"strict": true,
 		"strictPropertyInitialization": false,
 		"typeRoots": [
