--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-i18next": "^11.12.0",
+		"react-image-crop": "^9.0.5",
 		"react-modal-hook": "^3.0.0",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.1",
