--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/koa-bodyparser": "^4.3.0",
 		"@types/koa-multer": "^1.0.0",
 		"@types/koa-send": "^4.1.3",
+		"@types/markdown-it": "^12.2.3",
 		"@types/ms": "^0.7.31",
 		"@types/node-cron": "^2.0.3",
 		"@types/object.pick": "^1.3.1",
@@ -57,6 +58,7 @@
 		"koa-send": "^5.0.1",
 		"koa-session": "^6.0.0",
 		"koa-views": "^6.3.0",
+		"markdown-it": "^12.3.2",
 		"misskey-js": "^0.0.6",
 		"ms": "^2.1.3",
 		"node-cron": "^2.0.3",
@@ -67,6 +69,7 @@
 		"react-dom": "^17.0.2",
 		"react-i18next": "^11.12.0",
 		"react-image-crop": "^9.0.5",
+		"react-markdown": "^8.0.0",
 		"react-modal-hook": "^3.0.0",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.1",
@@ -75,6 +78,7 @@
 		"routing-controllers": "^0.9.0",
 		"sass": "^1.38.2",
 		"sass-loader": "^12.1.0",
+		"striptags": "^3.2.0",
 		"style-loader": "^3.2.1",
 		"styled-components": "^5.3.1",
 		"ts-loader": "^9.2.5",
@@ -85,7 +89,7 @@
 		"uuid": "^8.3.0",
 		"webpack": "^5.51.1",
 		"webpack-cli": "^4.8.0",
-		"xeltica-ui": "xeltica/ui"
+		"xeltica-ui": "xeltica/design-system"
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
