--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@babel/preset-react": "^7.14.5",
 		"@reduxjs/toolkit": "^1.6.1",
+		"@types/deepmerge": "^2.2.0",
 		"@types/insert-text-at-cursor": "^0.3.0",
 		"@types/koa-bodyparser": "^4.3.0",
 		"@types/koa-multer": "^1.0.0",
@@ -45,6 +46,7 @@
 		"class-validator": "^0.13.1",
 		"css-loader": "^6.2.0",
 		"dayjs": "^1.10.7",
+		"deepmerge": "^4.2.2",
 		"delay": "^4.4.0",
 		"fibers": "^5.0.0",
 		"i18next": "^20.6.1",
