--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@types/react": "^17.0.19",
 		"@types/react-dom": "^17.0.9",
 		"@types/react-router-dom": "^5.1.8",
+		"@types/react-twemoji": "^0.4.0",
 		"@types/styled-components": "^5.1.13",
 		"@types/uuid": "^8.0.0",
 		"axios": "^0.21.2",
@@ -75,6 +76,7 @@
 		"react-modal-hook": "^3.0.0",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.1",
+		"react-twemoji": "^0.5.0",
 		"reflect-metadata": "^0.1.13",
 		"rndstr": "^1.0.0",
 		"routing-controllers": "^0.9.0",
