--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 	"scripts": {
 		"build": "run-s build:backend build:frontend",
 		"build:frontend": "webpack",
-		"build:backend": "run-s build:backend-source build:views build:styles build:meta",
+		"build:backend": "run-s build:backend-source build:views build:meta build:styles build:assets",
 		"build:backend-source": "tsc",
 		"build:views": "copyfiles -u 1 src/backend/views/*.pug ./built/",
+		"build:assets": "copyfiles -u 1 assets/* ./built/assets/",
 		"build:meta": "node ./build-meta.js",
 		"build:styles": "sass styles/:built/assets",
 		"start": "node built/app.js",
@@ -91,7 +92,7 @@
 		"typeorm": "0.2.25",
 		"typescript": "^4.4.2",
 		"uuid": "^8.3.0",
-		"webpack": "^5.51.1",
+		"webpack": "^5.75.0",
 		"webpack-cli": "^4.8.0",
 		"xeltica-ui": "xeltica/design-system"
 	},
