--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "misskey-tools",
-	"version": "2.8.2",
+	"version": "2.8.3",
 	"description": "",
 	"main": "built/app.js",
-	"author": "Xeltica",
+	"author": "Shrimpia Network",
 	"private": true,
 	"scripts": {
 		"build": "run-s build:backend build:frontend",
