--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
 	"name": "misskey-tools",
-	"version": "2.8.3",
+	"version": "3.0.0-indev.1",
 	"description": "",
 	"main": "built/app.js",
 	"author": "Shrimpia Network",
 	"private": true,
-	"packageManager": "pnpm@7.27.0",
 	"scripts": {
 		"build": "run-s build:backend build:frontend",
 		"build:frontend": "webpack",
@@ -16,7 +15,7 @@
 		"build:meta": "node ./build-meta.js",
 		"build:styles": "sass styles/:built/assets",
 		"start": "node built/app.js",
-		"dev": "run-p dev:*",
+		"dev": "run-p 'dev:*'",
 		"dev:backend": "nodemon",
 		"dev:frontend": "webpack --watch",
 		"clean": "rimraf built",
@@ -27,87 +26,91 @@
 		"migrate:revert": "ts-node --project ./tsconfig.migration.json ./node_modules/typeorm/cli.js migration:revert"
 	},
 	"dependencies": {
-		"@babel/preset-react": "^7.18.6",
-		"@reduxjs/toolkit": "^1.9.3",
-		"axios": "^1.3.4",
-		"class-transformer": "^0.5.1",
+		"@babel/preset-react": "^7.14.5",
+		"@koa/multer": "^3.0.2",
+		"@reduxjs/toolkit": "^1.6.1",
+		"axios": "^0.21.2",
+		"class-transformer": "^0.4.0",
 		"class-validator": "^0.14.0",
-		"css-loader": "^6.7.3",
-		"dayjs": "^1.11.7",
-		"deepmerge": "^4.3.0",
-		"i18next": "^22.4.10",
-		"i18next-browser-languagedetector": "^7.0.1",
+		"css-loader": "^6.2.0",
+		"dayjs": "^1.10.7",
+		"deepmerge": "^4.2.2",
+		"delay": "^4.4.0",
+		"fibers": "^5.0.0",
+		"i18next": "^20.6.1",
+		"i18next-browser-languagedetector": "^6.1.2",
 		"insert-text-at-cursor": "^0.3.0",
 		"json5-loader": "^4.0.1",
-		"koa": "^2.14.1",
+		"koa": "^2.13.0",
 		"koa-bodyparser": "^4.3.0",
-		"@koa/multer": "^3.0.2",
-		"koa-router": "^12.0.0",
+		"koa-router": "^9.1.0",
 		"koa-send": "^5.0.1",
-		"koa-session": "^6.4.0",
-		"koa-views": "^8.0.0",
-		"markdown-it": "^13.0.1",
-		"misskey-js": "^0.0.15",
+		"koa-session": "^6.0.0",
+		"koa-views": "^6.3.0",
+		"markdown-it": "^12.3.2",
+		"misskey-js": "^0.0.6",
 		"ms": "^2.1.3",
-		"node-cron": "^3.0.2",
+		"node-cron": "^2.0.3",
 		"object.pick": "^1.3.0",
-		"pg": "^8.9.0",
-		"pug": "^3.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^12.1.5",
-		"react-image-crop": "^10.0.9",
-		"react-markdown": "^8.0.5",
-		"react-modal-hook": "^3.0.2",
-		"react-redux": "^8.0.5",
-		"react-router-dom": "^6.8.1",
+		"pg": "^8.3.0",
+		"pug": "^3.0.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-i18next": "^11.12.0",
+		"react-image-crop": "^9.0.5",
+		"react-markdown": "^8.0.0",
+		"react-modal-hook": "^3.0.0",
+		"react-redux": "^7.2.9",
+		"react-router-dom": "^5.2.1",
 		"react-twemoji": "^0.5.0",
 		"reflect-metadata": "^0.1.13",
 		"rndstr": "^1.0.0",
-		"routing-controllers": "^0.10.1",
-		"sass": "^1.58.3",
-		"sass-loader": "^13.2.0",
+		"routing-controllers": "^0.9.0",
+		"sass": "^1.38.2",
+		"sass-loader": "^12.1.0",
 		"striptags": "^3.2.0",
-		"style-loader": "^3.3.1",
-		"styled-components": "^5.3.6",
-		"ts-loader": "^9.4.2",
-		"tsc-alias": "^1.8.2",
-		"tsconfig-paths-webpack-plugin": "^4.0.0",
-		"typeorm": "0.3.12",
-		"typescript": "^4.9.5",
-		"uuid": "^9.0.0",
+		"style-loader": "^3.2.1",
+		"styled-components": "^5.3.1",
+		"ts-loader": "^9.2.5",
+		"tsc-alias": "^1.3.9",
+		"tsconfig-paths-webpack-plugin": "^3.5.1",
+		"typeorm": "0.2.25",
+		"typescript": "^4.4.2",
+		"uuid": "^8.3.0",
 		"webpack": "^5.75.0",
-		"xeltica-ui": "github:xeltica-studio/design-system"
+		"webpack-cli": "^4.8.0",
+		"xeltica-ui": "xeltica-studio/design-system"
 	},
 	"devDependencies": {
 		"@types/insert-text-at-cursor": "^0.3.0",
-		"@types/koa-bodyparser": "^4.3.10",
+		"@types/koa": "^2.11.3",
+		"@types/koa-bodyparser": "^4.3.0",
+		"@types/koa-router": "^7.4.1",
 		"@types/koa-send": "^4.1.3",
+		"@types/koa-session": "^5.10.2",
+		"@types/koa-views": "^2.0.4",
 		"@types/markdown-it": "^12.2.3",
 		"@types/ms": "^0.7.31",
-		"@types/node-cron": "^3.0.7",
-		"@types/object.pick": "^1.3.2",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"@types/react-router-dom": "^5.3.3",
+		"@types/node": "^8.0.29",
+		"@types/node-cron": "^2.0.3",
+		"@types/object.pick": "^1.3.1",
+		"@types/react": "^17.0.19",
+		"@types/react-dom": "^17.0.9",
+		"@types/react-router-dom": "^5.1.8",
 		"@types/react-twemoji": "^0.4.0",
-		"@types/styled-components": "^5.1.26",
-		"@types/uuid": "^9.0.1",
-		"@types/koa": "^2.13.5",
-		"@types/koa-router": "^7.4.4",
-		"@types/koa-session": "^5.10.6",
-		"@types/node": "^18.14.0",
-		"@typescript-eslint/eslint-plugin": "^5.53.0",
-		"@typescript-eslint/parser": "^5.53.0",
-		"copyfiles": "^2.4.1",
-		"eslint": "^8.34.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"nodemon": "^2.0.20",
+		"@types/styled-components": "^5.1.13",
+		"@types/uuid": "^8.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.30.0",
+		"@typescript-eslint/parser": "^4.30.0",
+		"copyfiles": "^2.3.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.8.4",
-		"rimraf": "^4.1.2",
-		"ts-node": "10.9.1",
-		"webpack-cli": "^5.0.1"
-	}
+		"prettier": "^2.0.5",
+		"rimraf": "^3.0.2",
+		"ts-node": "3.3.0"
+	},
+	"packageManager": "yarn@1.22.19"
 }
