--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@babel/preset-react": "^7.14.5",
 		"@koa/multer": "^3.0.2",
+		"@prisma/client": "^4.12.0",
 		"@reduxjs/toolkit": "^1.6.1",
 		"axios": "^0.21.2",
 		"class-transformer": "^0.5.1",
@@ -105,8 +106,8 @@
 		"eslint": "^8.34.0",
 		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
+		"prisma": "^4.12.0",
 		"rimraf": "^4.1.2",
 		"ts-node": "10.9.1"
-	},
-	"packageManager": "yarn@1.22.19"
+	}
 }
