--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "misskey-tools",
-	"version": "3.2.0",
+	"version": "4.0.0-dev",
 	"description": "",
 	"main": "built/app.js",
 	"author": "Shrimpia Network",
