--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,8 +9,6 @@
     "lint": "tsc --noEmit && eslint --fix \"src/**/*.ts*\""
   },
   "dependencies": {
-    "tools-ui": "workspace:*",
-    "tools-shared": "workspace:*",
     "@babel/preset-react": "^7.14.5",
     "@reduxjs/toolkit": "^1.6.1",
     "css-loader": "^6.2.0",
@@ -33,20 +31,23 @@
     "sass": "^1.38.2",
     "striptags": "^3.2.0",
     "styled-components": "^5.3.1",
+    "tools-shared": "workspace:*",
+    "tools-ui": "workspace:*",
     "typescript": "^4.9.5",
     "xeltica-ui": "xeltica-studio/design-system"
   },
   "devDependencies": {
-    "tools-eslint-config": "workspace:*",
-    "tools-tsconfig": "workspace:*",
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-twemoji": "^0.4.0",
     "@types/styled-components": "^5.1.13",
     "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^7.32.0",
+    "tools-eslint-config": "workspace:*",
+    "tools-tsconfig": "workspace:*",
     "typescript": "^4.8.3",
     "vite": "^3.1.0"
   }
