--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,8 +14,6 @@
 		"migrate:gen": "prisma migrate dev --create-only --name"
 	},
 	"dependencies": {
-		"tools-jest-presets": "workspace:*",
-		"tools-shared": "workspace:*",
 		"@koa/multer": "^3.0.2",
 		"@prisma/client": "^4.12.0",
 		"axios": "^0.21.2",
@@ -38,6 +36,8 @@
 		"rndstr": "^1.0.0",
 		"routing-controllers": "^0.10.1",
 		"striptags": "^3.2.0",
+		"tools-jest-presets": "workspace:*",
+		"tools-shared": "workspace:*",
 		"typescript": "^5.0.2",
 		"uuid": "^8.3.0"
 	},
@@ -48,6 +48,7 @@
 		"@types/koa-send": "^4.1.3",
 		"@types/koa-session": "^5.10.2",
 		"@types/koa-views": "^2.0.4",
+		"@types/markdown-it": "^12.2.3",
 		"@types/ms": "^0.7.31",
 		"@types/node": "^18.14.1",
 		"@types/node-cron": "^2.0.3",
