--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -4,6 +4,10 @@
 		"module": "esnext",
 		"outDir": "./dist/",
 		"rootDir": "./src/",
+		"baseUrl": ".",
+		"paths": {
+			"@/*":  ["src/*"]
+		}
 	},
 	"extends": "tools-tsconfig/base.json",
  }
