--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -32,7 +32,6 @@
     "striptags": "^3.2.0",
     "styled-components": "^5.3.1",
     "tools-shared": "workspace:*",
-    "tools-ui": "workspace:*",
     "typescript": "^4.9.5",
     "xeltica-ui": "xeltica-studio/design-system"
   },
@@ -49,6 +48,7 @@
     "tools-eslint-config": "workspace:*",
     "tools-tsconfig": "workspace:*",
     "typescript": "^4.8.3",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-tsconfig-paths": "^4.0.7"
   }
 }
