--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
-  "main": "index.js",
+  "main": "index.cjs",
   "dependencies": {
     "eslint-config-turbo": "latest"
   },
