--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@koa/multer": "^3.0.2",
 		"@prisma/client": "^4.12.0",
+		"@trpc/server": "^10.19.1",
 		"axios": "^0.21.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
