--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
     "@reduxjs/toolkit": "^1.6.1",
+    "@trpc/client": "^10.19.1",
+    "@trpc/server": "^10.19.1",
     "css-loader": "^6.2.0",
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "i18next": "^20.6.1",
     "i18next-browser-languagedetector": "^6.1.2",
     "insert-text-at-cursor": "^0.3.0",
+    "jotai": "^2.0.3",
+    "jotai-trpc": "^0.5.0",
     "json5-loader": "^4.0.1",
     "markdown-it": "^12.3.2",
     "react": "^17.0.2",
