--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,24 +14,20 @@
 		"migrate:gen": "prisma migrate dev --create-only --name"
 	},
 	"dependencies": {
-		"@koa/multer": "^3.0.2",
+		"@fastify/view": "^7.4.1",
 		"@prisma/client": "^4.12.0",
 		"@trpc/server": "^10.19.1",
 		"axios": "^0.21.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"dayjs": "^1.10.7",
+		"fastify": "^4.15.0",
 		"jest": "^26.6.3",
-		"koa": "^2.13.0",
-		"koa-bodyparser": "^4.3.0",
-		"koa-router": "^9.1.0",
-		"koa-send": "^5.0.1",
-		"koa-session": "^6.0.0",
-		"koa-views": "^6.3.0",
 		"markdown-it": "^12.3.2",
 		"ms": "^2.1.3",
 		"node-cron": "^2.0.3",
 		"pg": "^8.3.0",
+		"pino-pretty": "^10.0.0",
 		"pug": "^3.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rndstr": "^1.0.0",
@@ -44,16 +40,11 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@types/koa": "^2.11.3",
-		"@types/koa-bodyparser": "^4.3.0",
-		"@types/koa-router": "^7.4.1",
-		"@types/koa-send": "^4.1.3",
-		"@types/koa-session": "^5.10.2",
-		"@types/koa-views": "^2.0.4",
 		"@types/markdown-it": "^12.2.3",
 		"@types/ms": "^0.7.31",
 		"@types/node": "^18.14.1",
 		"@types/node-cron": "^2.0.3",
+		"@types/pug": "^2.0.6",
 		"@types/uuid": "^8.0.0",
 		"copyfiles": "^2.3.0",
 		"nodemon": "^2.0.4",
