--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2021",
-		"module": "esnext",
+		"module": "es2022",
 		"outDir": "./dist/",
 		"rootDir": "./src/",
 		"baseUrl": ".",
@@ -9,5 +9,6 @@
 			"@/*":  ["src/*"]
 		}
 	},
+	"include": ["src/"],
 	"extends": "tools-tsconfig/base.json",
  }
