wip: フロントエンドへのtRPC導入

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
     "@reduxjs/toolkit": "^1.6.1",
-    "@trpc/client": "^10.19.1",
-    "@trpc/server": "^10.19.1",
+    "@trpc/client": "10.20.0",
+    "@trpc/server": "10.20.0",
     "css-loader": "^6.2.0",
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
@@ -20,7 +20,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "insert-text-at-cursor": "^0.3.0",
     "jotai": "^2.0.3",
-    "jotai-trpc": "^0.5.0",
+    "jotai-trpc": "^0.4.0",
     "json5-loader": "^4.0.1",
     "markdown-it": "^12.3.2",
     "react": "^17.0.2",
@@ -29,26 +29,25 @@
     "react-image-crop": "^9.0.5",
     "react-markdown": "^8.0.0",
     "react-modal-hook": "^3.0.0",
-    "react-redux": "^7.2.9",
     "react-router-dom": "^5.2.1",
     "react-twemoji": "^0.5.0",
     "sass": "^1.38.2",
     "striptags": "^3.2.0",
     "styled-components": "^5.3.1",
     "tools-shared": "workspace:*",
-    "typescript": "^4.9.5",
+    "typescript": "4.9.3",
     "xeltica-ui": "xeltica-studio/design-system"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-twemoji": "^0.4.0",
     "@types/styled-components": "^5.1.13",
     "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^7.32.0",
+    "tools-backend": "workspace:*",
     "tools-eslint-config": "workspace:*",
     "tools-tsconfig": "workspace:*",
     "typescript": "^4.8.3",
