--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -48,11 +48,11 @@
 		"@types/node-cron": "^2.0.3",
 		"@types/pug": "^2.0.6",
 		"@types/uuid": "^8.0.0",
+		"eslint-config-tools": "workspace:*",
 		"copyfiles": "^2.3.0",
 		"npm-run-all": "^4.1.5",
 		"prisma": "^4.12.0",
 		"rimraf": "^4.1.2",
-		"tools-eslint-config": "workspace:*",
 		"tools-tsconfig": "workspace:*",
 		"tsup": "^6.2.3"
 	},
