--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@trpc/client": "10.20.0",
     "@trpc/server": "10.20.0",
     "css-loader": "^6.7.3",
     "dayjs": "^1.11.7",
     "deepmerge": "^4.3.1",
+    "framer-motion": "^10.12.4",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "insert-text-at-cursor": "^0.3.0",
@@ -45,9 +49,8 @@
     "@types/react-twemoji": "^0.4.0",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.38.0",
+    "eslint-config-tools": "workspace:*",
     "tools-backend": "workspace:*",
-    "tools-eslint-config": "workspace:*",
     "tools-tsconfig": "workspace:*",
     "typescript": "^4.8.3",
     "vite": "^4.2.2",
