--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "tools-eslint-config",
+  "name": "eslint-config-tools",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "main": "index.cjs",
-  "dependencies": {
-    "eslint-config-turbo": "latest"
-  },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.38.0",
+    "eslint-config-turbo": "latest"
   }
 }
