--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -50,6 +50,8 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint-config-tools": "workspace:*",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "tools-backend": "workspace:*",
     "tools-tsconfig": "workspace:*",
     "typescript": "^4.8.3",
