--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -32,6 +32,7 @@
     "react-image-crop": "^10.0.9",
     "react-markdown": "^8.0.7",
     "react-modal-hook": "^3.0.2",
+    "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-twemoji": "^0.5.0",
     "sass": "^1.62.0",
@@ -56,6 +57,7 @@
     "tools-tsconfig": "workspace:*",
     "typescript": "^4.8.3",
     "vite": "^4.2.2",
+    "vite-plugin-pages": "^0.29.0",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
