--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,19 +6,18 @@
     "build": "vite build",
     "clean": "rimraf dist",
     "dev": "vite --host 0.0.0.0 --clearScreen false",
-    "lint": "eslint --fix \"src/**/*.ts*\""
+    "lint": "eslint --fix \"src/**/*.ts*\"",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@chakra-ui/react": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@radix-ui/colors": "^0.1.8",
+    "@stitches/react": "^1.2.8",
     "@trpc/client": "10.20.0",
     "@trpc/server": "10.20.0",
-    "css-loader": "^6.7.3",
     "dayjs": "^1.11.7",
     "deepmerge": "^4.3.1",
-    "framer-motion": "^10.12.4",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "insert-text-at-cursor": "^0.3.0",
@@ -31,18 +30,23 @@
     "react-i18next": "^12.2.0",
     "react-image-crop": "^10.0.9",
     "react-markdown": "^8.0.7",
-    "react-modal-hook": "^3.0.2",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-twemoji": "^0.5.0",
     "sass": "^1.62.0",
     "striptags": "^3.2.0",
-    "styled-components": "^5.3.9",
     "tools-shared": "workspace:*",
-    "typescript": "5.0.4",
-    "xeltica-ui": "xeltica-studio/design-system"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.7",
+    "@storybook/addon-interactions": "^7.0.7",
+    "@storybook/addon-links": "^7.0.7",
+    "@storybook/blocks": "^7.0.7",
+    "@storybook/builder-vite": "^7.0.7",
+    "@storybook/react": "^7.0.7",
+    "@storybook/react-vite": "^7.0.7",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
@@ -53,6 +57,8 @@
     "eslint-config-tools": "workspace:*",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.7",
     "tools-backend": "workspace:*",
     "tools-tsconfig": "workspace:*",
     "typescript": "^4.8.3",
