--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,6 +33,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-twemoji": "^0.5.0",
+    "ress": "^5.0.2",
     "sass": "^1.62.0",
     "striptags": "^3.2.0",
     "tools-shared": "workspace:*",
@@ -52,7 +53,6 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-twemoji": "^0.4.0",
-    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint-config-tools": "workspace:*",
     "eslint-plugin-react": "^7.32.2",
