--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
     "@stitches/react": "^1.2.8",
     "@tabler/icons-webfont": "^2.17.0",
