--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-radio-group": "^1.1.2",
     "@stitches/react": "^1.2.8",
     "@tabler/icons-webfont": "^2.17.0",
     "@trpc/client": "10.20.0",
@@ -32,6 +33,7 @@
     "multiple-themes-stitches": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^12.2.0",
     "react-image-crop": "^10.0.9",
     "react-markdown": "^8.0.7",
@@ -56,6 +58,7 @@
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-twemoji": "^0.4.0",
     "@vitejs/plugin-react": "^3.1.0",
