chore: importに@を使うよう統一

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -4,6 +4,10 @@
 		"module": "esnext",
 		"outDir": "./dist/",
 		"rootDir": "./src/",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"]
+		}
 	},
   "exclude": ["node_modules"],
   "extends": "tools-tsconfig/base.json",
