feat(frontend): お知らせページ close #110

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,7 +19,9 @@
     "@radix-ui/react-radio-group": "^1.1.2",
     "@stitches/react": "^1.2.8",
     "@tabler/icons-webfont": "^2.17.0",
+    "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "10.20.0",
+    "@trpc/react-query": "^10.23.0",
     "@trpc/server": "10.20.0",
     "dayjs": "^1.11.7",
     "deepmerge": "^4.3.1",
