--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,13 +18,15 @@
 	"dependencies": {
 		"@fastify/view": "^7.4.1",
 		"@prisma/client": "4.13.0",
-		"@trpc/server": "10.20.0",
+		"@trpc/server": "10.23.0",
 		"axios": "^0.21.2",
+		"bullmq": "^3.12.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"dayjs": "^1.10.7",
 		"dotenv": "^16.0.3",
 		"fastify": "^4.15.0",
+		"ioredis": "^5.3.2",
 		"jest": "^26.6.3",
 		"markdown-it": "^12.3.2",
 		"misskey-js": "^0.0.15",
@@ -44,7 +46,6 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@types/dotenv": "^8.2.0",
 		"@types/markdown-it": "^12.2.3",
 		"@types/ms": "^0.7.31",
 		"@types/node": "^18.14.1",
