--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "misskey-tools",
-	"version": "4.0.0-dev",
-	"description": "",
-	"author": "Shrimpia Network",
+  "name": "misskey-tools",
+  "version": "4.0.0-dev",
+  "description": "",
+  "author": "Shrimpia Network",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -10,10 +10,10 @@
     "dev": "turbo run dev --no-cache  --continue",
     "lint": "turbo run lint",
     "test": "turbo run test",
-		"storybook": "pnpm recursive --filter tools-frontend run storybook"
+    "storybook": "pnpm recursive --filter tools-frontend run storybook"
   },
   "devDependencies": {
-    "turbo": "latest"
+    "turbo": "^1.9.3"
   },
   "packageManager": "pnpm@8.3.1"
 }
