--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -38,11 +38,11 @@
     "react-i18next": "^12.2.2",
     "react-image-crop": "^10.0.9",
     "react-markdown": "^8.0.7",
-    "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0",
+    "react-router": "^6.11.0",
+    "react-router-dom": "^6.11.0",
     "react-twemoji": "^0.5.0",
     "ress": "^5.0.2",
-    "sass": "^1.62.0",
+    "sass": "^1.62.1",
     "striptags": "^3.2.0",
     "tools-shared": "workspace:*"
   },
@@ -55,14 +55,14 @@
     "@storybook/builder-vite": "^7.0.7",
     "@storybook/react": "^7.0.7",
     "@storybook/react-vite": "^7.0.7",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/testing-library": "^0.1.0",
     "@types/markdown-it": "^12.2.3",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-twemoji": "^0.4.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "eslint-config-tools": "workspace:*",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -71,7 +71,7 @@
     "tools-backend": "workspace:*",
     "tools-tsconfig": "workspace:*",
     "typescript": "5.0.4",
-    "vite": "^4.2.2",
+    "vite": "^4.3.3",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.30.1"
   }
