--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-radio-group": "^1.1.2",
+    "@radix-ui/react-switch": "^1.0.2",
     "@stitches/react": "^1.2.8",
     "@tabler/icons-webfont": "^2.17.0",
     "@tanstack/react-query": "^4.29.5",
