--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-radio-group": "^1.1.2",
@@ -72,7 +73,7 @@
     "tools-backend": "workspace:*",
     "tools-tsconfig": "workspace:*",
     "typescript": "5.0.4",
-    "vite": "^4.3.3",
+    "vite": "^4.3.8",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.30.1"
   }
