--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,7 +20,7 @@
 		"@prisma/client": "4.13.0",
 		"@trpc/server": "10.23.0",
 		"axios": "^1.4.0",
-		"bull": "^4.10.4",
+		"bullmq": "^3.14.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"dayjs": "^1.11.7",
