--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,7 +9,7 @@
 		"clean": "rimraf dist",
 		"dev": "tsc --noEmit && tsup --watch --onSuccess \"node --enable-source-maps dist/app.js\"",
 		"lint": "eslint --fix \"src/**/*.ts*\"",
-		"start": "NODE_ENV=production node dist/app.js",
+		"start": "node dist/app.js",
 		"start-dev": "node --enable-source-maps dist/app.js",
 		"migrate": "prisma migrate dev",
 		"test": "jest --detectOpenHandles",
