--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,6 +36,7 @@
     "multiple-themes-stitches": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-corner": "^2.5.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^12.2.2",
     "react-image-crop": "^10.0.9",
