--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "turbo run build",
     "clean": "turbo run clean",
-    "dev": "turbo run dev --no-cache  --continue",
+    "dev": "turbo run dev --no-cache --continue --force",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "storybook": "pnpm recursive --filter tools-frontend run storybook"
